--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="progress"><span></span></div>
   <script>
     setTimeout(() => {
-     window.location.href = "ishraq-step-main/index.html";
+     window.location.href = "ishraq-step-main/chat/start.html";
     }, 3500);
   </script>
 
