--- a/ishraq-step-main/chat/start.html
+++ b/ishraq-step-main/chat/start.html
@@ -366,14 +366,9 @@
     if (savedSession) {
       try {
         const session = JSON.parse(savedSession);
-        showDialog(
-            "أهلاً بعودتك! 👋",
-            `أنت مسجل دخول بالفعل باسم <b style="color:#ffd166">${session.name}</b>`,
-            "🚀",
-            "الذهاب للدردشة",
-            () => { window.location.href = 'chat.html'; },
-            true // إظهار زر تسجيل الخروج
-        );
+
+        window.location.href = '../index.html'; 
+        
       } catch (e) {
         localStorage.removeItem('chat_session');
       }
@@ -440,7 +435,7 @@
               name,
               avatar: avatarUrl,
               role,
-              text: `${name} انضم إلى الدردشة`,
+              text: `${name} مجتمع المبرمجين`,
               timestamp: Date.now()
             });
 
@@ -451,7 +446,7 @@
                 "تم التسجيل بنجاح! 🎉",
                 "بياناتك جاهزة، يمكنك الآن بدء المحادثة مع الآخرين.",
                 "✨",
-                "ابدأ الدردشة الآن",
+                "ادخل مجتمعنا الان",
                 () => { window.location.href = 'chat.html'; }
             );
           }
@@ -460,7 +455,7 @@
         console.error(err);
         alert('حدث خطأ غير متوقع.');
         enterBtn.disabled = false;
-        enterBtn.innerText = 'دخول للدردشة';
+        enterBtn.innerText = 'دخول';
       }
     });
 
