--- a/ishraq-step-main/chat/chat.html
+++ b/ishraq-step-main/chat/chat.html
@@ -49,10 +49,10 @@
     /* --- التخطيط الرئيسي --- */
     .wrap {
       width: 95%;
-      max-width: 900px; /* تقليل العرض ليكون مناسباً بدون الجانبية */
       height: 90vh;
       position: relative;
       margin: 0 auto;
+      margin-bottom: 5%;
     }
 
     .card {
