--- a/ishraq-step-main/ishraq-step-youtupe.html
+++ b/ishraq-step-main/ishraq-step-youtupe.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ishraq Step - الدروس المرئية</title>
   <link rel="stylesheet" href="css/video.css">
-  <link rel="icon" href="icon.png" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="css/open-sidebar.css">
 
   <style>
@@ -117,7 +118,7 @@
   <header>📚 Ishraq Step - الدروس</header>
 
   <input type="checkbox" id="toggleSidebar">
-  <label for="toggleSidebar" class="toggle-btn">☰ اخفاء القائمة</label>
+  <label for="toggleSidebar" class="toggle-btn">☰</label>
 
   <iframe id="siteSidebar" src="sidebar.html"></iframe>
 
