--- a/ishraq-step-main/learn/profile.html
+++ b/ishraq-step-main/learn/profile.html
@@ -121,7 +121,7 @@
     </div>
 
     <div class="actions">
-      <button class="btn btn-outline" onclick="location.href='chat.html'">العودة للدردشة</button>
+      <button class="btn btn-outline" onclick="location.href='../index.html'">العودة للصفحة</button>
       <button class="btn btn-logout" id="logoutBtn">تسجيل الخروج</button>
     </div>
   </div>
