--- a/ishraq-step-main/book-details.html
+++ b/ishraq-step-main/book-details.html
@@ -6,7 +6,8 @@
   <title>تفاصيل الكتاب - Ishraq Step</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="css/buttons.css" rel="stylesheet">
-  <link rel="icon" href="icon.png" type="image/x-icon">
+  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="icon.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <style>
     body { font-family: 'Cairo', sans-serif; background-color: #f5f5f5; margin: 0; padding: 20px; direction: rtl; }
