--- a/ishraq-step-main/index.html
+++ b/ishraq-step-main/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
-<head>
+<head>  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Ishraq Step</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="css/colors.css" rel="stylesheet">
-  <link rel="icon" href="icon.png" type="image/x-icon">
-  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="icon.png">
   <meta name="theme-color" content="#ff8a00">
   <link rel="stylesheet" href="css/open-sidebar.css">
   
