--- a/ishraq-step-main/tasks.html
+++ b/ishraq-step-main/tasks.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>مسار المهام - Ishraq Step</title>
+  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -290,5 +292,4 @@
     render();
   </script>
 </body>
-
 </html>
